--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html lang="en">
 	<head>
-		<title>{{ site.title }}</title>
+		<title>{% if page.title %} {{ page.title }} | {% endif %} {{ site.title }}</title>
 		<meta name="description" content="{{ site.description }}">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0">
@@ -9,7 +9,7 @@
 		<link rel="dns-prefetch" href="//fonts.googleapis.com">
 		<link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
 
-		<link rel="stylesheet" type="text/css" href="css/woutr.css">
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/woutr.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
@@ -17,3 +17,9 @@
 	</head>
 
 	<body>
+		<div class="wrapper">
+			<header class="header">
+				<h1><a href="{{ site.url }}" title="{{ site.title }}">Wouter De Loose</a></h1>
+			</header>
+
+			<main>
