Updated styling and added first article

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,4 +9,28 @@ layout: default
 	<div class="post__body">
 		{{ content }}
 	</div>
+
+	<div class="post__note">
+		<p>This article was written to the best of my abilities, if you spot any mistakes or have suggestions for improvements, you can open an <a href="https://github.com/woutrbe/woutrbe.github.io/issues" target="_blank">issue on Github</a>, <a href="#comment">leave a comment below</a>, or <a href="mailto:wouter@woutr.me">send me an email</a>.
+	</div>
+
+	{% if page.comments %}
+	<div class="post__comments" id="comment">
+		<span class="post__comments-title">Comments</span>
+		<div id="disqus_thread"></div>
+		<script>
+		var disqus_config = function () {
+			this.page.url = "{{ page.url }}";
+			this.page.identifier = "{{ page.url }}";
+		};
+		(function() {
+		var d = document, s = d.createElement('script');
+		s.src = '//wouter-de-loose.disqus.com/embed.js';
+		s.setAttribute('data-timestamp', +new Date());
+		(d.head || d.body).appendChild(s);
+		})();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	</div>
+	{% endif %}
 </article>
