Added some margin for comments

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -58,7 +58,10 @@
 		padding: 10px 0;
 		margin: 20px 0;
 	}
-	.post__comments-title {
-		font-size: 1.5rem;
-		font-weight: 700;
+	.post__comments {
+		margin-bottom: 20px;
 	}
+		.post__comments-title {
+			font-size: 1.5rem;
+			font-weight: 700;
+		}
