--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,8 +10,8 @@
 		<link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
 
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/woutr.css">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link href="//fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 		<link rel="author" href="humans.txt" />
 	</head>
